--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,20 +12,46 @@ jobs:
   lint-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      db:
+        image: postgres:15
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: pass
+          POSTGRES_DB: simple_service_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U user"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: 1.24.3
 
-      - name: Run tests
-        run: go test ./... -v
-
-      - name: Upload coverage report
-        if: success()
+      - name: Wait for Postgres to be healthy
         run: |
-          go test ./... -coverprofile=coverage.out
-          go tool cover -func=coverage.out
+          until pg_isready -h localhost -p 5432 -U user; do
+            echo "Waiting for Postgres…"
+            sleep 1
+          done
+
+      - name: Install golang-migrate CLI
+        run: |
+          go install github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+      - name: Add Go bin to PATH
+        run: echo "$HOME/go/bin" >> $GITHUB_PATH
+        
+      - name: Run migrations
+        run: migrate -path db/migrations -database "postgres://user:pass@localhost:5432/simple_service_test?sslmode=disable" up
+
+      - name: Run tests
+        env:
+          DATABASE_URL: "postgres://user:pass@localhost:5432/simple_service_test?sslmode=disable"
+        run: go test ./... -v
