--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  lint-and-test:
+  test:
     runs-on: ubuntu-latest
 
     services:
@@ -33,23 +33,18 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.24.3
+          go-version: 1.24
 
-      - name: Wait for Postgres to be healthy
+      - name: Wait for DB
         run: |
           until pg_isready -h localhost -p 5432 -U user; do
-            echo "Waiting for Postgres…"
+            echo "Waiting for postgres…"
             sleep 1
           done
 
-      - name: Install golang-migrate CLI
-        run: |
-          go install -tags "postgres" github.com/golang-migrate/migrate/v4/cmd/migrate@latest
-      - name: Add Go bin to PATH
-        run: echo "$HOME/go/bin" >> $GITHUB_PATH
-
       - name: Run migrations
-        run: migrate -path db/migrations -database "postgres://user:pass@localhost:5432/simple_service_test?sslmode=disable" up
+        run: migrate -path db/migrations \
+                      -database "postgres://user:pass@localhost:5432/simple_service_test?sslmode=disable" up
 
       - name: Run tests
         env:
