--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,27 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  test:
+    image: golang:1.24
+    working_dir: /app
+    volumes:
+      - .:/app
+    environment:
+      DATABASE_URL: "postgres://user:pass@db:5432/simple_service_test?sslmode=disable"
+    depends_on:
+      db:
+        condition: service_healthy
+    command: go test ./... -v
+
+  web:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      DATABASE_URL: "postgres://user:pass@db:5432/simple_service?sslmode=disable"
+    depends_on:
+      - db
+
 volumes:
   db_data:
 
