--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    env:
+      DATABASE_URL: postgres://user:pass@localhost:5432/simple_service_test?sslmode=disable
     services:
       db:
         image: postgres:15
