fix(): install migrate command in ci

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Run migrations
         run: |
           migrate \
-            -path file://db/migrations \
+            -path db/migrations \
             -database "${{ env.DATABASE_URL }}" \
             up
 
